Undo Sort Fix (#2569)
* r1

* working fix